--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -190,22 +190,23 @@ progress[value] {
 /* Calendar Section */
 .calendar-section {
     flex: 1;
-    background: #F9F5F6;
+    background: #FDFAF6;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: -20px;
 }
 
 .calendar-title {
     margin-bottom: 15px;
     font-size: 1.8rem;
-    color: #F31559;
+    color: #015551;
     font-weight: bold;
     text-align: center;
-    border-bottom: 2px solid #F31559;
+    border-bottom: 2px solid #015551;
     padding-bottom: 5px;
     width: 80%;
 }
@@ -248,7 +249,7 @@ progress[value] {
 /* Details Section */
 .details-calendar-section {
     flex: 1;
-    background: #F9F5F6;
+    background: #FDFAF6;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -263,7 +264,7 @@ progress[value] {
 
 .task-details h4 {
     margin-bottom: 10px;
-    color: #D61355;
+    color: #015551;
     font-size: 1.5rem;
 }
 
@@ -273,14 +274,14 @@ progress[value] {
 }
 
 .task-details p strong {
-    color: #36AE7C;
+    color: #DF6D14;
     font-weight: bold;
 }
 
 .highlight-task {
     width: 80%;
     height: 80%;
-    background-color: #F31559; /* Màu xanh lá */
+    background-color: #FE4F2D; /* Màu xanh lá */
     border-radius: 50%; /* Hình tròn */
     margin: auto; /* Canh giữa */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
