--- a/client/src/components/calendar/Calendar.css
+++ b/client/src/components/calendar/Calendar.css
@@ -1,4 +1,3 @@
-Container chung
 .calendar-container {
   display: flex;
   gap: 20px;
@@ -18,8 +17,15 @@ Container chung
   overflow-y: auto;
 }
 
+.calendar h1 {
+  margin-left: 25px;
+  color: #7D0A0A;
+  margin-bottom: 0px;
+}
+
 .week-details h2 {
   margin-bottom: 20px;
+  color: #7D0A0A;
 }
 
 .day-details {
@@ -32,7 +38,7 @@ Container chung
 }
 
 .day-details h3 {
-  color: #00796b;
+  color: #8D0B41;
   margin-bottom: 10px;
 }
 
@@ -47,8 +53,8 @@ Container chung
 }
 
 .active-day {
-  background-color: #4caf50;
-  border-color: #4caf50;
+  background-color: #8D0B41;
+  border-color: #8D0B41;
   color: white;
 }
 
@@ -62,6 +68,7 @@ Container chung
 
 .day-details:hover {
   background-color: #ead6d6;
+  color: #8D0B41;
 }
 
 .event-dot {
