--- a/client/src/components/dashboard/my_tasks_components/MyTasks.css
+++ b/client/src/components/dashboard/my_tasks_components/MyTasks.css
@@ -82,12 +82,12 @@
 }
 
 .task-title {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 600;
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin-bottom: 15px;
+    gap: 5px;
+    margin-bottom: 10px;
     margin-top: 30px;
 }
 
