--- a/client/src/components/tasks/Tasks.css
+++ b/client/src/components/tasks/Tasks.css
@@ -11,10 +11,11 @@
   padding: 20px;
   overflow-x: auto;
   overflow-y: hidden;
-  background-color: #DBE3F8;
+  background-color: #D1E9F6;
   background-size: cover;
   height: 85vh;
   white-space: nowrap;
+  border-radius: 10px;
 }
 
 .kanban-board::-webkit-scrollbar {
@@ -34,10 +35,11 @@
   font-size: 28px;
   font-weight: bold;
   margin-bottom: 10px;
+  color: #0B192C;
 }
 
 .column {
-  background: #ffffff;
+  background: #FFFFFF;
   padding: 12px;
   border-radius: 8px;
   min-width: 280px;
@@ -59,7 +61,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #daf1e0;
+  background-color: #D9EAFD;
   height: 100%;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -107,6 +109,7 @@
   margin-bottom: 12px;
   text-align: center;
   padding: 10px 10px;
+  color: #213555;
 }
 
 .task-list {
@@ -118,15 +121,16 @@
 }
 
 .task-card {
-  background: #f4f5f7;
+  background: #F8FAFC;
   padding: 10px;
   border-radius: 6px;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 2px #D9EAFD;
   transition: transform 0.2s ease-in-out;
   margin-top: 5px;
   height: 80px;
   align-items: center;
   width: 280px;
+  border-color: #D9EAFD;
 }
 
 .task-card:hover {
@@ -182,7 +186,7 @@
 /* Buttons */
 .add-card,
 .add-column {
-  background: #0079bf;
+  background: #205781;
   color: white;
   padding: 8px 12px;
   border: none;
@@ -199,11 +203,11 @@
 }
 
 .add-column {
-  background: #5aac44;
+  background: #1F4529;
 }
 
 .add-column:hover {
-  background: #498c36;
+  background: #47663B;
 }
 
 .button-delete {
