--- a/client/src/components/user/Forms.css
+++ b/client/src/components/user/Forms.css
@@ -40,7 +40,7 @@ form button {
   padding: 12px;
   border: none;
   border-radius: 5px;
-  background-color: #4CAF50;
+  background-color: #213555;
   color: #fff;
   font-size: 16px;
   cursor: pointer;
@@ -48,7 +48,7 @@ form button {
 }
 
 form button:hover {
-  background-color: #45a049;
+  background-color: #001A6E;
 }
 
 .redirect-message {
