--- a/client/src/components/user/viewProfile/ViewProfile.css
+++ b/client/src/components/user/viewProfile/ViewProfile.css
@@ -178,11 +178,10 @@
 
 .small-avatar {
     width: 70px;
-
     height: 70px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid #4267b2;
+    /* border: 2px solid #4267b2; */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s ease-in-out;
     margin-left: 50px;
@@ -190,4 +189,20 @@
 
 .small-avatar:hover {
     transform: scale(1.05);
+}
+
+.small-no-avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    /* object-fit: cover; */
+    /* border: 2px solid #4267b2; */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s ease-in-out;
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: bold;
 }
