--- a/client/src/components/chat/Chat.css
+++ b/client/src/components/chat/Chat.css
@@ -48,13 +48,13 @@
     height: 100%;
 } */
 
-.chat-ui {
+/* .chat-ui {
     display: flex;
     height: 100vh; 
     width: 100%;
     overflow: hidden; 
     box-sizing: border-box; 
-}
+} */
 
 .team-message-list {
     width: 30%;
@@ -255,7 +255,7 @@
 
 .chat-ui {
     display: flex;
-    height: 100vh;
+    height: 85vh;
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
